--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
+    "formik": "^2.4.5",
+    "nanoid": "^5.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.8"
+    "react-redux": "^9.1.0",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.8",
+    "web-vitals": "^3.5.2",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
