--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.24.7",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
